--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="content">
             <div class="contentBx w50">
-                <h3>I'm a Cloud IT Specialist. I'm 21 y.o.</h3>
+                <h3>I'm a Cloud IT Specialist.<br>I'm 21 y.o.</h3>
                 <p>I've studied at ITTS Carlo Grassi (IT School) in Turin, Italy, and I'm graduate in 2020 and after I'm studing at ICT ITS Piemonte.<br>
                     I'm studing Cloud IT, because the future of informatic technoly is only on Cloud. So I'm a good designer, and a good programmer (I think 😋).
                     <br><br>
