--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
             <div class="content">
                 <div class="languagesBx">
-                    <img src="Icon/html5.svg">
+                    <a href="https://www.html.it/" target="_blank"><img src="Icon/html5.svg"></a>
                 </div>
                 <div class="languagesBx">
                     <img src="Icon/java-script.svg">
