--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
                     <a href="https://www.html.it/" target="_blank"><img src="Icon/html5.svg"></a>
                 </div>
                 <div class="languagesBx">
-                    <img src="Icon/java-script.svg">
+                    <a href="https://www.javascript.com/" target="_blank"><img src="Icon/java-script.svg"></a>
                 </div>
                 <div class="languagesBx">
-                    <img src="Icon/linux.svg">
+                    <a href="https://manjaro.org/" target="_blank"><img src="Icon/linux.svg"></a>
                 </div>
                 <div class="languagesBx">
-                    <img src="Icon/docker.svg">
+                    <a href="https://github.com/FraCata00/ITS-ICT_Containers" target="_blank"><img src="Icon/docker.svg"></a>
                 </div>
                 <div class="languagesBx">
-                    <img src="Icon/amazon.svg">
+                    <a href="https://aws.amazon.com/" target="_blank"><img src="Icon/amazon.svg"></a>
                 </div>
                 <div class="languagesBx">
-                    <img src="Icon/cloud-computing.svg">
+                    <a href="https://aws.amazon.com/it/what-is-cloud-computing/"><img src="Icon/cloud-computing.svg"></a>
                 </div>
             </div>
             <div class="heading">
