--- a/index.html
+++ b/index.html
@@ -132,6 +132,38 @@
             <div class="heading">
                 <a href="#" class="btn">View More</a>
             </div>
+
+    </section>
+    <section class="github" id="github">
+        <div class="heading">
+            <h2>My GitHub Profile</h2>
+        </div>
+        <div class="content">
+            <div class="contentBx w50">
+                <div class="container">
+                    <div class="row">
+                        <div class="column left">
+                            <span class="dot" style="background:#ED594A;"></span>
+                            <span class="dot" style="background:#FDD800;"></span>
+                            <span class="dot" style="background:#5AC05A;"></span>
+                        </div>
+                        <div class="column middle">
+                            <input type="text" value="https://fracata00.github.io">
+                        </div>
+                        <div class="column right">
+                            <div style="float:right">
+                                <span class="bar"></span>
+                                <span class="bar"></span>
+                                <span class="bar"></span>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="content">
+                        <a href="https://github.com/FraCata00" target="_blank"><img src="Image/GitHubProfile.png" style="border-top-left-radius: 0%; border-top-right-radius: 0%; border-bottom-left-radius: 13px; border-bottom-right-radius: 13px;"></a>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <section class="contact" id="contact">
@@ -177,7 +209,8 @@
             <div class="formBx">
                 <form>
                     <h3>Message Me</h3>
-                    <input type="text" name="" placeholder="Full Name">
+                    <br>
+                    <input type="text" name="" placeholder="Full Name" style="height: auto;">
                     <input type="email" name="" placeholder="Email">
                     <textarea placeholder="Your Message"></textarea>
                     <input type="submit" value="Send">
