--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h2>My GitHub Profile</h2>
         </div>
         <div class="content">
-            <div class="contentBx w50">
+            <div class="contentBxGitHub w50">
                 <div class="container">
                     <div class="row">
                         <div class="column left">
