Add Mobile UI/UX

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <a href="#" class="logo">Portfolio</a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="menu">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#works">Works</a></li>
-            <li><a href="#languages">Languages</a></li>
-            <li><a href="#contact">Contact Me</a></li>
+            <li><a href="#home" onclick="toggleMenu();">Home</a></li>
+            <li><a href="#about" onclick="toggleMenu();">About Me</a></li>
+            <li><a href="#works" onclick="toggleMenu();">Works</a></li>
+            <li><a href="#languages" onclick="toggleMenu();">Languages</a></li>
+            <li><a href="#contact" onclick="toggleMenu();">Contact Me</a></li>
         </ul>
     </header>
 
