Added some fix code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     </header>
 
     <section class="banner" id="home">
+        <!--<script type="text/javascript" src="src/particles.min.js">
+            window.onload = function () {
+                    Particles.init({
+                        selector: '.banner'
+                    });
+                };
+        </script>-->
         <div class="textBx">
             <h2>Hello, I'm<br><span>Francesco Cataldo.</span></h2>
             <h3>I'm a Cloud IT Specialist.</h3>
