--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
                 <p>I've studied at ITTS Carlo Grassi (IT School) in Turin, Italy, and I'm graduate in 2020 and after I'm studing at ICT ITS Piemonte.<br>
                     I'm studing Cloud IT, because the future of informatic technoly is only on Cloud. So I'm a good designer, and a good programmer (I think 😋).
                     <br><br>
-                    Scroll Down.
+                    Scroll Down to see all.
                 </p>
             </div>
             <div class="w50">
-                <img src="Image/cloudSpecialist.jpg" class="img">
+                <!--<img src="Image/cloudSpecialist.jpg" class="img">-->
+                <img src="Image/matrix.gif" class="img">
             </div>
         </div>
     </section>
