--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FraCata00 on GitHub</title>
-    <link rel="icon" href="Icon/favicon.svg" sizes="any" type="image/svg+xml"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
-        integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+    <link rel="icon" href="Icon/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
     <link rel="stylesheet" href="Content/style.css">
 </head>
+
 <body>
     <header>
         <a href="#" class="logo">Portfolio</a>
@@ -45,10 +46,9 @@
         <div class="content">
             <div class="contentBx w50">
                 <h3>I'm a Cloud IT Specialist.<br>I'm 21 y.o.</h3>
-                <p>I've studied at ITTS Carlo Grassi (IT School) in Turin, Italy, and I'm graduate in 2020 and after I'm studing at ICT ITS Piemonte.<br>
-                    I'm studing Cloud IT, because the future of informatic technoly is only on Cloud. So I'm a good designer, and a good programmer (I think 😋).
-                    <br><br>
-                    Scroll Down to see all.
+                <p>I've studied at ITTS Carlo Grassi (IT School) in Turin, Italy, and I'm graduate in 2020 and after I'm studing at ICT ITS Piemonte.<br> I'm studing Cloud IT, because the future of informatic technoly is only on Cloud. So I'm a good designer,
+                    and a good programmer (I think 😋).
+                    <br><br> Scroll Down to see all.
                 </p>
             </div>
             <div class="w50">
@@ -69,42 +69,34 @@
             <div class="worksBx">
                 <a href="https://github.com/FraCata00/MVC_Film" target="_blank"><img src="Icon/microsoft.svg" style="height: 100px;"></a>
                 <h2>Microsoft ASP .NET Core</h2>
-                <p>Is a special Microsft's framework .NET Core, you can code an MVC Website for example.<br>
-                    MVC (Model View Controller) is coded on C#, cshtml, HTML_RAZOR, CSS (bootstrap), javascript.<br>
-                    So you can code for example a streaming website with DB (database) in Cloud, like Microsoft Azure, manage
-                    with SQL Server Management Studio and coded all on Visual Studio.
+                <p>Is a special Microsft's framework .NET Core, you can code an MVC Website for example.<br> MVC (Model View Controller) is coded on C#, cshtml, HTML_RAZOR, CSS (bootstrap), javascript.<br> So you can code for example a streaming website
+                    with DB (database) in Cloud, like Microsoft Azure, manage with SQL Server Management Studio and coded all on Visual Studio.
                 </p>
             </div>
             <div class="worksBx">
                 <a href="https://aws.amazon.com/" target="_blank"><img src="Icon/cloud-database.svg" style="height: 100px;"></a>
                 <h2>Cloud Database</h2>
-                <p>La più ampia scelta di database ad hoc per tutte le esigenze delle applicazioni.
-                    Avere un database in locale ormai non ha piu' senso, meglio averne uno tutto gestito e personalizzato in cloud.<br>
-                    Servizi di cloud database come Microsft Azure o AWS (Amazon Web Services) sono tra i piu' famosi e offrono tantissime funzionalita'.
+                <p>La più ampia scelta di database ad hoc per tutte le esigenze delle applicazioni. Avere un database in locale ormai non ha piu' senso, meglio averne uno tutto gestito e personalizzato in cloud.<br> Servizi di cloud database come Microsft
+                    Azure o AWS (Amazon Web Services) sono tra i piu' famosi e offrono tantissime funzionalita'.
                 </p>
             </div>
             <div class="worksBx">
                 <a href="https://azure.microsoft.com/" target="_blank"><img src="Icon/cloud.svg" style="height: 100px;"></a>
                 <h2>Cloud</h2>
-                <p>Cloud che non è altro che uno spazio di archiviazione personale, chiamato talvolta anche cloud storage che risulta essere
-                accessibile in qualsiasi momento ed in ogni luogo utilizzando semplicemente una qualunque connessione ad Internet.<br>
-                Bisogna comunque precisare che con il termine cloud, oltre che a riferirsi al cloud storage, a volte ci si potrebbe
-                riferire anche ad altri servizi offerti dal cloud computing.
+                <p>Cloud che non è altro che uno spazio di archiviazione personale, chiamato talvolta anche cloud storage che risulta essere accessibile in qualsiasi momento ed in ogni luogo utilizzando semplicemente una qualunque connessione ad Internet.<br>                    Bisogna comunque precisare che con il termine cloud, oltre che a riferirsi al cloud storage, a volte ci si potrebbe riferire anche ad altri servizi offerti dal cloud computing.
                 </p>
             </div>
             <div class="worksBx">
                 <a href="https://docker.com/" target="_blank"><img src="Icon/docker.svg" style="height: 100px;"></a>
                 <h2>Docker Container</h2>
-                <p>Docker è una piattaforma software che permette di creare, testare e distribuire applicazioni con la massima rapidità.<br>
-                Docker raccoglie il software in unità standardizzate chiamate container che offrono tutto il necessario per la loro
-                corretta esecuzione, incluse librerie, strumenti di sistema, codice e runtime.
+                <p>Docker is a software platform that allows you to create, test and deploy applications with maximum speed. <br> Docker collects software into standardized units called containers that offer everything you need for them proper execution,
+                    including libraries, system tools, code, and runtime. This application in developed using Node.js Express and MongoDB Atlas connection with mongoose framework.
                 </p>
             </div>
             <div class="worksBx">
                 <a href="https://github.com/FraCata00" target="_blank"><img src="Icon/github.svg" style="height: 100px;"></a>
                 <h2>FraCata00 on GitHub</h2>
-                <p>This is my dev account on GitHub, and you can find all my repositories on my account.<br>
-                    I share some of my projects inside this platform, because GitHub is the best site or platform to share code, to other programmer or developer.
+                <p>This is my dev account on GitHub, and you can find all my repositories on my account.<br> I share some of my projects inside this platform, because GitHub is the best site or platform to share code, to other programmer or developer.
                 </p>
             </div>
         </div>
@@ -117,29 +109,29 @@
                 Some of the program languages and SW that I use.
             </p>
         </div>
-            <div class="content">
-                <div class="languagesBx">
-                    <a href="https://www.html.it/" target="_blank"><img src="Icon/html5.svg"></a>
-                </div>
-                <div class="languagesBx">
-                    <a href="https://www.javascript.com/" target="_blank"><img src="Icon/java-script.svg"></a>
-                </div>
-                <div class="languagesBx">
-                    <a href="https://manjaro.org/" target="_blank"><img src="Icon/linux.svg"></a>
-                </div>
-                <div class="languagesBx">
-                    <a href="https://github.com/FraCata00/ITS-ICT_Containers" target="_blank"><img src="Icon/docker.svg"></a>
-                </div>
-                <div class="languagesBx">
-                    <a href="https://aws.amazon.com/" target="_blank"><img src="Icon/amazon.svg"></a>
-                </div>
-                <div class="languagesBx">
-                    <a href="https://aws.amazon.com/it/what-is-cloud-computing/"><img src="Icon/cloud-computing.svg"></a>
-                </div>
+        <div class="content">
+            <div class="languagesBx">
+                <a href="https://www.html.it/" target="_blank"><img src="Icon/html5.svg"></a>
             </div>
-            <div class="heading">
-                <a href="#" class="btn">View More</a>
+            <div class="languagesBx">
+                <a href="https://www.javascript.com/" target="_blank"><img src="Icon/java-script.svg"></a>
             </div>
+            <div class="languagesBx">
+                <a href="https://manjaro.org/" target="_blank"><img src="Icon/linux.svg"></a>
+            </div>
+            <div class="languagesBx">
+                <a href="https://github.com/FraCata00/ITS-ICT_Containers" target="_blank"><img src="Icon/docker.svg"></a>
+            </div>
+            <div class="languagesBx">
+                <a href="https://aws.amazon.com/" target="_blank"><img src="Icon/amazon.svg"></a>
+            </div>
+            <div class="languagesBx">
+                <a href="https://aws.amazon.com/it/what-is-cloud-computing/"><img src="Icon/cloud-computing.svg"></a>
+            </div>
+        </div>
+        <div class="heading">
+            <a href="#" class="btn">View More</a>
+        </div>
 
     </section>
     <section class="github" id="github">
@@ -148,29 +140,29 @@
         </div>
         <div class="content">
             <div class="container">
-                    <div class="row">
-                        <div class="column left">
-                            <span class="dot" style="background:#ED594A;"></span>
-                            <span class="dot" style="background:#FDD800;"></span>
-                            <span class="dot" style="background:#5AC05A;"></span>
-                        </div>
-                        <div class="column middle">
-                            <input type="text" value="https://fracata00.github.io">
-                        </div>
-                        <div class="column right">
-                            <div style="float:right">
-                                <span class="bar"></span>
-                                <span class="bar"></span>
-                                <span class="bar"></span>
-                            </div>
-                        </div>
+                <div class="row">
+                    <div class="column left">
+                        <span class="dot" style="background:#ED594A;"></span>
+                        <span class="dot" style="background:#FDD800;"></span>
+                        <span class="dot" style="background:#5AC05A;"></span>
                     </div>
-                
-                    <div class="content">
-                        <a href="https://github.com/FraCata00" target="_blank"><img src="Image/GitHubProfile.png" style="border-top-left-radius: 0%; border-top-right-radius: 0%; border-bottom-left-radius: 13px; border-bottom-right-radius: 13px;"></a>
+                    <div class="column middle">
+                        <input type="text" value="https://fracata00.github.io">
+                    </div>
+                    <div class="column right">
+                        <div style="float:right">
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
                     </div>
                 </div>
+
+                <div class="content">
+                    <a href="https://github.com/FraCata00" target="_blank"><img src="Image/GitHubProfile.png" style="border-top-left-radius: 0%; border-top-right-radius: 0%; border-bottom-left-radius: 13px; border-bottom-right-radius: 13px;"></a>
+                </div>
             </div>
+        </div>
     </section>
 
     <section class="contact" id="contact">
@@ -229,12 +221,12 @@
         <p>Copyright © 2021 Francesco Cataldo. All Right Reserved</p>
     </div>
     <script type="text/javascript">
-        window.addEventListener('scroll', function(){
+        window.addEventListener('scroll', function() {
             var header = document.querySelector('header');
             header.classList.toggle('sticky', window.scrollY > 0);
         });
 
-        function toggleMenu(){
+        function toggleMenu() {
             var menuToggle = document.querySelector('.toggle');
             var menu = document.querySelector('.menu');
             menuToggle.classList.toggle('active');
@@ -242,4 +234,5 @@
         }
     </script>
 </body>
+
 </html>
