change code view

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <a href="https://docker.com/" target="_blank"><img src="Icon/docker.svg" style="height: 100px;"></a>
                 <h2>Docker Container</h2>
                 <p>Docker is a software platform that allows you to create, test and deploy applications with maximum speed. <br> Docker collects software into standardized units called containers that offer everything you need for them proper execution,
-                    including libraries, system tools, code, and runtime. This application in developed using Node.js Express and MongoDB Atlas connection with mongoose framework.
+                    including libraries, system tools, code, and runtime. This application in developed using Node.js Express and MongoDB Atlas connection with mongoose framework.<br> This is an API rest in Node.js
                 </p>
             </div>
             <div class="worksBx">
